{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 28,
  "lineage": "e6d6357f-0d65-4408-f6f3-3ece5225a484",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "afterdarksys",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966511618:vpc/vpc-0c1b813880b3982a5",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08121477eaeb0373f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0aefe942add7d97a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "afterdarksys-vpc"
                ]
              }
            ],
            "id": "vpc-0c1b813880b3982a5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb117489fceec5ce",
            "owner_id": "515966511618",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "SuperDeploy",
              "Name": "afterdarksys-vpc",
              "Owner": "AfterDarkSystems",
              "Project": "AfterDarkSystems"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067",
            "arn_suffix": "app/veribits-alb/dd497235f4e0d067",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "veribits-alb-1472450181.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "veribits-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e53ba20502038956"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090b8a4dcf1291fed"
              },
              {
                "subnet_id": "subnet-09a67ca87776a42c9"
              }
            ],
            "subnets": [
              "subnet-090b8a4dcf1291fed",
              "subnet-09a67ca87776a42c9"
            ],
            "tags": {
              "Name": "veribits-alb"
            },
            "tags_all": {
              "Name": "veribits-alb"
            },
            "vpc_id": "vpc-0c1b813880b3982a5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.afterdarksys_all",
            "data.aws_subnets.afterdarksys_public",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/d7a275f79448ed29",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/d7a275f79448ed29",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/d7a275f79448ed29"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_security_group.alb_sg",
            "data.aws_subnets.afterdarksys_all",
            "data.aws_subnets.afterdarksys_public",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/568a7a5ddcf1092c",
            "certificate_arn": "arn:aws:acm:us-east-1:515966511618:certificate/1b11e755-3db4-4104-9f22-e4b980bd57e5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:targetgroup/veribits-tg/f18ef5865569bbee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/568a7a5ddcf1092c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:listener/app/veribits-alb/dd497235f4e0d067/568a7a5ddcf1092c"
          },
          "dependencies": [
            "aws_acm_certificate.veribits",
            "aws_acm_certificate_validation.veribits",
            "aws_lb.app",
            "aws_lb_target_group.app_tg",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.veribits_new",
            "aws_security_group.alb_sg",
            "data.aws_route53_zone.veribits_existing",
            "data.aws_subnets.afterdarksys_all",
            "data.aws_subnets.afterdarksys_public",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:targetgroup/veribits-tg/f18ef5865569bbee",
            "arn_suffix": "targetgroup/veribits-tg/f18ef5865569bbee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:515966511618:targetgroup/veribits-tg/f18ef5865569bbee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:515966511618:loadbalancer/app/veribits-alb/dd497235f4e0d067"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "veribits-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "veribits-tg"
            },
            "tags_all": {
              "Name": "veribits-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1b813880b3982a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:515966511618:targetgroup/veribits-tg/f18ef5865569bbee"
          },
          "dependencies": [
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966511618:security-group/sg-0e53ba20502038956",
            "description": "Security group for VeriBits ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e53ba20502038956",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "veribits-alb-sg",
            "name_prefix": "",
            "owner_id": "515966511618",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "veribits-alb-sg"
            },
            "tags_all": {
              "Name": "veribits-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1b813880b3982a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515966511618",
            "id": "sg-0e53ba20502038956",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966511618:security-group/sg-0422b38f99e7b23ce",
            "description": "Security group for VeriBits ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0422b38f99e7b23ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e53ba20502038956"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "veribits-ecs-sg",
            "name_prefix": "",
            "owner_id": "515966511618",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "veribits-ecs-sg"
            },
            "tags_all": {
              "Name": "veribits-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1b813880b3982a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515966511618",
            "id": "sg-0422b38f99e7b23ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966511618:security-group/sg-07a92b8336b623ebc",
            "description": "Security group for VeriBits Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a92b8336b623ebc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0422b38f99e7b23ce"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "veribits-redis-sg",
            "name_prefix": "",
            "owner_id": "515966511618",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "veribits-redis-sg"
            },
            "tags_all": {
              "Name": "veribits-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1b813880b3982a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "515966511618",
            "id": "sg-07a92b8336b623ebc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "veribits_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow VeriBits ECS tasks to access database",
            "from_port": 5432,
            "id": "sgrule-3627983718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-011e3c8ac8f73858b",
            "security_group_rule_id": "sgr-0b6cc1fb2419f4ece",
            "self": false,
            "source_security_group_id": "sg-0422b38f99e7b23ce",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "data.aws_db_instance.afterdarksys_pg",
            "data.aws_vpc.afterdarksys"
          ]
        }
      ]
    }
  ]
}